resolve some Java 9 deprecations and warnings